# sealenv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: config.rs  crypto.rs  gitignore.rs  main.rs  profile.rs  run.rs
tests/: integration_test.rs
